# testbook

./: .gitignore  MANIFEST.in  README.md  Testbook template.xlsx  pyproject.toml  requirements.txt  setup.py
resources/assets/js/: testbook.js
resources/templates/: index.html  navigation.html  testset.html
testbook/: cli.py  core.py
testbook/resources/templates/: testset.html
