[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "testbook"
version = "0.0.4"
description = "For managing functional tests"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Cottage Labs", email = "richard@cottagelabs.com" },
]
dependencies = [
    "click>=8.0.0",
    "jinja2~=3.1.4",
    "MarkupSafe~=2.1.5",
    "pyyaml~=6.0.2",
]

[project.scripts]
testbook = "testbook.cli:main"

[project.urls]
Homepage = "https://cottagelabs.com/"